fixed spacing in wop section. Added basic footer with contact and copyright info as well as additional social links

--- a/src/components/WOP/WOP.css
+++ b/src/components/WOP/WOP.css
@@ -1,5 +1,6 @@
 .wop {
     background-image: url('../../images/redBrick.jpg') !important;
     color:#fff8f7;
+    background-size:cover;
     
 }
